--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,11 @@ data_ingestion:
   source_URL : https://github.com/sahilgoregaonkar/Branching-tutorial/raw/main/winequalityN.zip
   local_data_file : artifacts/data_ingestion/data.zip
   unzip_dir : artifacts/data_ingestion
+
+
+data_validation:
+  root_dir : artifacts/data_validation
+  unzip_data_dir : artifacts/data_ingestion/winequalityN.csv
+  STATUS_FILE : artifacts/data_validation/status.txt
+
+  
